<resources>
    <string name="app_name">VidVintage</string>
    <string name="email">Email...</string>
    <string name="password">Password</string>
    <string name="log_in">Email Login</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="create_account">Create account</string>
    <string name="copyright">Created by Delfin Hernandez Ⓒ</string>
    <string name="login_active_text">Login</string>
    <string name="section_title_rss">RSS</string>
    <string name="loren_ipsum">Sed ut perspiciatis unde omniset qua coqui dolorem ipsum quia dolor sit amet, consectetur, adipSed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci</string>
    <string name="section_title_cocktails">Cocktails</string>
    <string name="section_title_profile">Profile</string>
    <string name="article_title">Article Title</string>
    <string name="article_author_label">Autor :</string>
    <string name="article_author">Article Author Names</string>
    <string name="article_url_label">Url :</string>
    <string name="article_url">http://europapress.com/feed...</string>
    <string name="feedUrl">https://www.abarabove.com/feed</string>
    <string name="title_activity_deleeeeeteee">DELEEEEETEEE</string>
    <string name="tags">Tags: </string>
    <string name="cocktail_menu_item_title">Sex on the Beach</string>
    <string name="cocktail_menu_item_description">One of the most tipical cocktailVOS, base on pineapple juice and vodka, so fresh and addictive. Try it out!</string>
    <string name="not_supported">Not supported yet. Available in TFM</string>
    <string name="article_added">Added to favourites</string>
    <string name="article_removed">Removed from favourites</string>

    <string name="text_inmmersive_mode">Pantalla completa</string>
    <string name="preferences_dialog_theme">Tema:</string>
    <string name="preferences_dialog_theme_light">Light</string>
    <string name="preferences_dialog_theme_dark">Dark</string>
    <string name="preferences_dialog_session">Mantener sesión iniciada</string>
    <string name="preferences_dialog_close_session">Cerrar Sesión</string>
    <string name="app_title">Vi d\' Vintage</string>
    <string name="color_subsection_active">#99ccff</string>
    <string name="color_inactive_subection">#666666</string>
    <string name="no_cocktails_yet">No cocktails yet! Take a look to the menu</string>
    <string name="no_articles_yet">No articles saved! Check the feed for news</string>
    <string name="new_cocktail_section">Service not available yet</string>
    <string name="section_title_no_title" />
    <string name="section_title_gin">Gin\'s</string>
    <string name="take_photo">Take Photo</string>
    <string name="load_from_gallery">Load from gallery</string>
    <string name="new_cocktail_name">Cocktail name</string>
    <string name="new_cocktail_description">Cocktail Description</string>
    <string name="new_cocktail_receipt">Cocktail Receipt</string>
    <string name="new_cocktail_ingredients">Ingredients</string>
    <string name="new_cocktail_finish">Finish Cocktail !</string>
    <string name="new_cocktail_add_ingredient">Add Ingredient...</string>
    <string name="new_cocktail_add_image">Introduce the image url</string>
    <string name="new_cocktail_url">url...</string>
    <string name="ok">Accept</string>
    <string name="new_cocktail_name_required">The cocktail name is required</string>
    <string name="new_cocktail_url_required">The cocktail image URL is required</string>
    <string name="new_cocktail_description_required">The cocktail description is required</string>
    <string name="new_cocktail_receipt_required">The cocktail receipt is required</string>
    <string name="new_cocktail_added">NEW COCKTAIL ADDED!</string>
    <string name="invaid_mail">Please, set a valid mail</string>
    <string name="invalid_password">Please, set a valid password (at least 8 characters)</string>

</resources>
