<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="25dp"
    android:layout_marginEnd="25dp"
    android:padding="25dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/preferences_fullscreen_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/text_inmmersive_mode" />

        <CheckBox
            android:id="@+id/preferences_fullscreen_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preferences_fullscreen_option">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/preferences_dialog_theme" />

        <Button
            android:id="@+id/preferences_fullscreen_theme_light"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/button_unselected"
            android:text="@string/preferences_dialog_theme_light" />

        <Button
            android:id="@+id/preferences_fullscreen_theme_dark"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@drawable/button_selected"
            android:text="@string/preferences_dialog_theme_dark" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/preferences_session_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/preferences_dialog_session" />

        <CheckBox
            android:id="@+id/preferences_save_session_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/preferences_close_session_btn"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/preferences_dialog_close_session"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_unselected"/>

</LinearLayout>