<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/article_detail_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cocktail_menu_item_bg"
    android:layout_marginBottom="54dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/article_detail_bg"
        android:elevation="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="38dp">

        <ScrollView
            android:id="@+id/article_detail_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:id="@+id/article_detail_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.example.dhernandez.vidvintage.Utils.CustomImageView
                    android:id="@+id/article_detail_image"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:src="@android:drawable/ic_menu_edit"/>

                <TextView
                    android:id="@+id/article_detail_title"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/article_title"
                    android:fontFamily="@font/raleway_bold"
                    android:textAlignment="center"
                    android:textSize="28sp" />

                <LinearLayout
                    android:id="@+id/article_detail_author_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="25dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/raleway_bold"
                        android:text="@string/article_author_label"/>

                    <TextView
                        android:id="@+id/article_detail_author"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/article_author"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/article_detail_url_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/raleway_bold"
                        android:text="@string/article_url_label"/>

                    <TextView
                        android:id="@+id/article_detail_url"
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/article_url"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/article_detail_description"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_regular"
                    android:lineSpacingExtra="2dp"
                    android:text="@string/loren_ipsum"/>

            </LinearLayout>

        </ScrollView>


    </RelativeLayout>



</android.support.constraint.ConstraintLayout>