<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="36dp"
    android:paddingEnd="36dp">

    <LinearLayout
        android:id="@+id/cocktail_menu_item_photo_view"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="65dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.example.dhernandez.vidvintage.Utils.CustomImageView
            android:id="@+id/cocktail_menu_item_photo"
            android:background="@android:color/transparent"
            android:src="@drawable/refresh_icon"
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:fontFamily="@font/raleway_bold"
        android:textSize="28sp"
        android:textColor="@android:color/white"
        android:id="@+id/cocktail_menu_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/cocktail_menu_item_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cocktail_menu_item_photo_view" />

    <TextView
        android:id="@+id/cocktail_menu_item_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cocktail_menu_item_description"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cocktail_menu_item_title" />

    <TextView
        android:textColor="@android:color/white"
        android:id="@+id/cocktail_menu_item_tags_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/tags"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cocktail_menu_item_description" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/cocktail_menu_item_tags_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/cocktail_menu_item_tags_title"
        app:layout_constraintTop_toBottomOf="@+id/cocktail_menu_item_description" />

</android.support.constraint.ConstraintLayout>