<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:visibility="visible"
    android:id="@+id/login_view"
    tools:context=".ui.Activities.LoginActivity"
    android:paddingLeft="0dp">

    <!-- Background image -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/cocktail_menu_item_bg"
        android:alpha="0.7"
        android:id="@+id/login_view_bg"/>

    <!-- Login Layout content -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/login_view_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

            <!-- App icon -->
        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="75dp"
            android:paddingStart="20dp"
            android:src="@drawable/like2"
            app:layout_constraintBottom_toTopOf="@+id/login_view_app_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- App title-->
        <TextView
            android:id="@+id/login_view_app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:baselineAligned="false"
            android:fontFamily="@font/lobster_regular"
            android:text="@string/app_title"
            android:textAlignment="center"
            android:textColor="@color/font_color"
            android:textSize="24pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_icon" />

        <!-- Login options -->
        <LinearLayout
            android:id="@+id/login_forms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/text_copyright"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_view_app_title">

            <!-- Input mail-->

            <EditText
                android:id="@+id/field_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="37dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:fontFamily="@font/raleway_medium"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingBottom="5dp"
                android:paddingEnd="10dp"
                android:paddingStart="15px"
                android:paddingTop="10dp"
                android:textColor="@color/font_color_forms"
                android:textSize="14sp"
                android:visibility="gone" />

            <!-- Input password -->
            <EditText
                android:id="@+id/field_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="37dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:fontFamily="@font/raleway_medium"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="5dp"
                android:paddingEnd="10dp"
                android:paddingStart="15px"
                android:paddingTop="10dp"
                android:textColor="@color/font_color_forms"
                android:textSize="14sp"
                android:visibility="gone" />

            <!-- Log in form title -->
            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="37dp"
                android:layout_marginTop="5dp"
                android:background="@color/background_color"
                android:fontFamily="@font/raleway_bold"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/log_in"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <!-- Split separation between e-mail login and facebook log in -->
            <ImageView
                android:id="@+id/login_split"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#00000000"
                android:src="@drawable/login_split" />

            <!-- Facebook button login-->

            <!--com.facebook.login.widget.LoginButton
                android:id="@+id/login_button_fb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="37dp"
                android:background="@color/background_color"
                android:backgroundTint="@color/background_color"
                android:fontFamily="@font/raleway_light"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textSize="18sp"
                android:visibility="gone" /-->
            <Button
                android:id="@+id/login_button_false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="37dp"
                android:background="@color/background_color"
                android:backgroundTint="@color/background_color"
                android:fontFamily="@font/raleway_bold"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/facebook_login"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/email_create_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/create_account"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="8pt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_forms" />
        </LinearLayout>

        <!-- Create new account button -->

        <ProgressBar
            android:id="@+id/login_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintBottom_toTopOf="@id/text_copyright"
            app:layout_constraintTop_toBottomOf="@id/login_forms"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:progressTint="@color/background_color"
            android:visibility="invisible"/>

        <!-- Author/Copyright -->
        <TextView
            android:id="@+id/text_copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="@font/raleway_regular"
            android:text="@string/copyright"
            android:textAlignment="center"
            android:textColor="@color/white" />

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>